pass at visualizing a single BehaviorChain, added DetailTableBuilder, Type visualization via TypeEndpoint

--- a/src/FubuMVC.Diagnostics/Content/Styles/diagnostics/bootstrap.overrides.css
+++ b/src/FubuMVC.Diagnostics/Content/Styles/diagnostics/bootstrap.overrides.css
@@ -20,3 +20,13 @@
 	min-height: 600px;
 	top: 70px;
 }
+
+table.details th
+{
+	text-align:right;
+}
+
+table.details th span
+{
+	padding-right: 8px;
+}
