CSS styling to visualize behaviors that didn't execute in a request tracing

--- a/src/FubuMVC.Diagnostics/Content/Styles/diagnostics/bootstrap.overrides.css
+++ b/src/FubuMVC.Diagnostics/Content/Styles/diagnostics/bootstrap.overrides.css
@@ -152,3 +152,10 @@ li.exception div.node-trace-container
 	color: Red;
 	font-weight: bold;
 }
+
+
+li.gray div.node-trace-container
+{
+	color: Gray;
+	text-decoration: line-through;
+}
