updated home screen styles, to not overlap.

--- a/src/FubuMVC.Diagnostics/Content/Styles/diagnostics/bootstrap.overrides.css
+++ b/src/FubuMVC.Diagnostics/Content/Styles/diagnostics/bootstrap.overrides.css
@@ -1,4 +1,8 @@
-﻿.container-fluid > .sidebar {
+﻿h2 {
+    line-height: inherit !important;
+}
+
+.container-fluid > .sidebar {
     width: 280px;
 }
 
