replaced the slickgrid's w/ dumb tables

--- a/src/FubuMVC.Diagnostics/Content/Styles/diagnostics/bootstrap.overrides.css
+++ b/src/FubuMVC.Diagnostics/Content/Styles/diagnostics/bootstrap.overrides.css
@@ -163,3 +163,7 @@ li.gray div.node-trace-container
 	color: Gray;
 	text-decoration: line-through;
 }
+
+td.number {
+    text-align: right !important;
+}
